Added functions to support play/pause

--- a/src/playlist.css
+++ b/src/playlist.css
@@ -47,7 +47,7 @@
   border-color: transparent transparent transparent #202020;
 }
 
-.buttonpauce {
+.buttonpause {
   width: 74px;
  height: 74px;
  border-style: solid;
