Added sound on/off icon to VolumeControl

--- a/src/styles/mediacontrol.css
+++ b/src/styles/mediacontrol.css
@@ -1,3 +1,17 @@
+.media-container {
+    font-weight: 700;
+    font-size: 2rem;
+    color: white;
+    padding: 1em 1em;
+    display: flex;
+    text-align: center;
+}
+  
+.media-container > div {
+    flex-grow: 1;
+    width: 33%;
+}
+
 .media-button {
     border: 0;
     background: none;
